fixed js shrink gap -5 top  for navbar

--- a/Dominic_Knabe_Portfolio_Site/src/scss/base/index.scss
+++ b/Dominic_Knabe_Portfolio_Site/src/scss/base/index.scss
@@ -25,7 +25,7 @@ body{
     text-align: center;
     img{
         width: 400px;
-        height: auto;
+        height: 600px;
     }
     article{
         height: 400px;
